--- a/composer.json
+++ b/composer.json
@@ -1,19 +1,22 @@
 {
-  "name": "troychaplin79/wp-functions",
-  "description": "WordPress theme functions",
-  "keywords": ["wordpress", "plugin"],
-  "homepage": "https://troychaplin.ca",
-  "license": "MIT",
-  "type": "wordpress-plugin",
-  "authors": [
-    {
-      "name": "Troy Chaplin",
-      "email": "troy.chaplin@gmail.com",
-      "homepage": "https://troychaplin.ca"
-    }
-  ],
-  "require": {
-    "php": ">=5.3",
-    "composer/installers": "1.*"
-  }
+	"name": "troychaplin79/wp-functions",
+	"description": "WordPress theme functions",
+	"keywords": [
+		"wordpress",
+		"plugin"
+	],
+	"homepage": "https://troychaplin.ca",
+	"license": "MIT",
+	"type": "wordpress-plugin",
+	"authors": [
+		{
+			"name": "Troy Chaplin",
+			"email": "troy.chaplin@gmail.com",
+			"homepage": "https://troychaplin.ca"
+		}
+	],
+	"require": {
+		"php": ">=7.0",
+		"composer/installers": "1.*"
+	}
 }
